[tool.poetry]
name = "pour"
version = "0.1.0"
description = ""
authors = ["Gustav <gustav-git@pm.me>"]
readme = "README.md"
packages = [{ include = "app.py" }]

[tool.poetry.scripts]
pour = "app:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
